fixed flex alignment

--- a/codes/sun/sun.css
+++ b/codes/sun/sun.css
@@ -695,6 +695,7 @@ end of pagepiling section  */
 
     .overview-page .hero1 .text1 {
         gap: 0rem;
+        align-items: center;
     }
 
     .post-text {
